<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/StyleRowLinearDialogAboutStationL">
        <TextView
            android:text="@string/nameStation"
            style="@style/TxViewForDialogStation"
            android:layout_width="100dp"/>
        <TextView
            android:id="@+id/idStationName"
            style="@style/TxViewForDialogStation"
            android:layout_width="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StyleRowLinearDialogAboutStationL">
        <TextView
            android:text="@string/strCountry"
            style="@style/TxViewForDialogStation"
            android:layout_width="100dp"/>
        <TextView
            android:id="@+id/idCountryName"
            style="@style/TxViewForDialogStation"
            android:layout_width="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StyleRowLinearDialogAboutStationL">
        <TextView
            android:text="@string/srtCity"
            style="@style/TxViewForDialogStation"
            android:layout_width="100dp"/>
        <TextView
            android:id="@+id/idCityName"
            style="@style/TxViewForDialogStation"
            android:layout_width="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        style="@style/StyleRowLinearDialogAboutStationL">
        <TextView
            android:text="@string/nameRegion"
            style="@style/TxViewForDialogStation"
            android:layout_width="100dp"/>
        <TextView
            android:id="@+id/idRegionName"
            style="@style/TxViewForDialogStation"
            android:layout_width="wrap_content"/>
    </LinearLayout>

</LinearLayout>